Added tracking system in a folder called Localization. The list of beacons used for the tracking is hardcoded in the file GABeacon in a static block. The map is also hardcoded in a new constructor in the file GABeaconMap.

--- a/AugmentEPF/app/src/main/res/layout/activity_settings.xml
+++ b/AugmentEPF/app/src/main/res/layout/activity_settings.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.filiereticsa.arc.augmentepf.SettingsActivity">
+    tools:context="com.filiereticsa.arc.augmentepf.Activities.SettingsActivity">
 
 </android.support.constraint.ConstraintLayout>
