--- a/AugmentEPF/app/src/main/res/layout/activity_path_planning.xml
+++ b/AugmentEPF/app/src/main/res/layout/activity_path_planning.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.filiereticsa.arc.augmentepf.PathPlanningActivity">
+    tools:context="com.filiereticsa.arc.augmentepf.Activities.PathPlanningActivity">
 
 </android.support.constraint.ConstraintLayout>
