--- a/AugmentEPF/app/src/main/res/layout/fragment_localization.xml
+++ b/AugmentEPF/app/src/main/res/layout/fragment_localization.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <RelativeLayout
@@ -35,6 +36,16 @@
             </ScrollView>
 
         </com.filiereticsa.arc.augmentepf.Localization.LockableScrollView>
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/fab_margin"
+            android:layout_marginRight="@dimen/fab_margin"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            app:srcCompat="@android:drawable/ic_dialog_map" />
 
     </RelativeLayout>
 
