--- a/AugmentEPF/app/src/main/res/xml/settings.xml
+++ b/AugmentEPF/app/src/main/res/xml/settings.xml
@@ -3,13 +3,13 @@
 
     <!-- General parameters -->
     <PreferenceCategory
-        android:title="Général">
+        android:title="General">
 
         <!-- Notification -->
         <CheckBoxPreference
             android:key="notification_user"
             android:title="Notification"
-            android:summary="Activer/désactiver les notifications"
+            android:summary="Enable/disable notifications"
             android:defaultValue="true">
         </CheckBoxPreference>
 
@@ -17,28 +17,28 @@
         <CheckBoxPreference
             android:key="localisation_user"
             android:title="Localisation"
-            android:summary="Activer/désactiver la localisation de l'appareil"
+            android:summary="Enable/disable the localisation of the device"
             android:defaultValue="true">
         </CheckBoxPreference>
     </PreferenceCategory>
 
     <!-- User parameters -->
     <PreferenceCategory
-        android:title="Paramètres utilisateur">
+        android:title="User parameters">
 
         <!-- User type -->
         <ListPreference
             android:key="type_user"
             android:title="Type"
-            android:summary="Permet de sélectionner le type d'utilisateur"
+            android:summary="Select user type"
             android:entryValues="@array/user_type_values_array">
         </ListPreference>
 
         <!-- Specific attribute -->
         <ListPreference
             android:key="specific_attribute_user"
-            android:title="Attribut spécifique"
-            android:summary="Permet d'adapter l'application à chaque utilisateur"
+            android:title="Specific Attribut"
+            android:summary="Select specific attribut"
             android:entries="@array/specific_attribute_array"
             android:entryValues="@array/specific_attribute_values_array">
         </ListPreference>
@@ -46,10 +46,10 @@
         <!-- Lien iCal -->
         <EditTextPreference
             android:key="edit"
-            android:title="Lien iCal"
-            android:summary="Permet de modifier le lien iCal lié au compte"
-            android:dialogTitle="Lien iCal"
-            android:dialogMessage="Doit être de la forme : http://edt.epf.fr/pegasus/ical.php?v1=..."
+            android:title="iCal link"
+            android:summary="Permit to edit the link of the account"
+            android:dialogTitle="iCal link"
+            android:dialogMessage="Must be like this: http://edt.epf.fr/pegasus/ical.php?v1=..."
             android:inputType="text"
             android:singleLine="true">
         </EditTextPreference>
@@ -57,13 +57,13 @@
 
     <!-- Navigation parameters -->
     <PreferenceCategory
-        android:title="Paramètres de navigation">
+        android:title="NAvigation parameters">
 
         <!-- Navigation mode -->
         <ListPreference
             android:key="mode_navigation"
-            android:title="Mode de navigation"
-            android:summary="Permet de choisir le mode de guidage"
+            android:title="Navigation mode"
+            android:summary="Select the guidance mode"
             android:entries="@array/navigation_array"
             android:entryValues="@array/navigation_values_array">
         </ListPreference>
