--- a/AugmentEPF/app/src/main/res/layout/activity_home_page.xml
+++ b/AugmentEPF/app/src/main/res/layout/activity_home_page.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -12,4 +12,72 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
-</android.support.design.widget.CoordinatorLayout>
+    <SlidingDrawer
+        android:id="@+id/leftSlidingDrawer"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:content="@+id/left_content"
+        android:handle="@+id/left_handle"
+        android:orientation="horizontal"
+        android:rotation="180">
+
+        <ImageButton
+            android:id="@id/left_handle"
+            android:layout_width="68dp"
+            android:layout_height="fill_parent"
+            android:background="@drawable/nav_left_barbis" />
+
+        <!-- layout for the content of the SlidingDrawer -->
+        <LinearLayout
+            android:id="@id/left_content"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:orientation="horizontal"
+            android:rotation="180">
+
+            <fragment
+                android:id="@+id/options_fragment"
+                android:name="com.filiereticsa.arc.augmentepf.fragments.OptionsFragment"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent" />
+
+        </LinearLayout>
+
+    </SlidingDrawer>
+
+    <SlidingDrawer
+        android:id="@+id/rightSlidingDrawer"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:content="@+id/right_content"
+        android:handle="@+id/right_handle"
+        android:orientation="horizontal"
+        android:rotation="360">
+
+
+        <ImageButton
+            android:id="@id/right_handle"
+            android:layout_width="68dp"
+            android:layout_height="fill_parent"
+            android:background="@drawable/nav_right_barbis" />
+
+        <!--</FrameLayout>-->
+
+        <!-- layout for the content of the SlidingDrawer -->
+        <LinearLayout
+            android:id="@id/right_content"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:orientation="horizontal">
+
+            <fragment
+                android:id="@+id/search_fragment"
+                android:name="com.filiereticsa.arc.augmentepf.fragments.SearchFragment"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent" />
+
+        </LinearLayout>
+
+    </SlidingDrawer>
+
+</FrameLayout>
