--- a/AugmentEPF/app/src/main/res/layout/activity_connection.xml
+++ b/AugmentEPF/app/src/main/res/layout/activity_connection.xml
@@ -36,6 +36,7 @@
             android:textColor="@color/colorPrimaryDark"/>
 
         <EditText
+            android:id="@+id/login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="16sp" />
@@ -63,6 +64,7 @@
             app:passwordToggleEnabled="true">
 
             <android.support.design.widget.TextInputEditText
+                android:id="@+id/password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
