--- a/AugmentEPF/app/src/main/res/values/colors.xml
+++ b/AugmentEPF/app/src/main/res/values/colors.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!--<color name="colorPrimary">#FA232E</color>-->
     <color name="colorPrimary">#DA0813</color>
     <color name="colorPrimaryDark">#393939</color>
     <color name="colorAccent">#DA0813</color>
@@ -12,4 +11,7 @@
     <color name="gold">#FFD700</color>
     <color name="grey">#BFBFBFBF</color>
     <color name="white">#fffeff</color>
+
+
+    <color name="path_color">#4286f4</color>
 </resources>
