--- a/AugmentEPF/app/src/main/res/layout/activity_admin.xml
+++ b/AugmentEPF/app/src/main/res/layout/activity_admin.xml
@@ -34,6 +34,7 @@
     <LinearLayout android:orientation="horizontal"
         android:layout_height="wrap_content"
         android:layout_width="match_parent">
+
         <TextView android:layout_marginLeft="5dp"
             android:text="X Coordinate :"
             android:layout_height="wrap_content"
@@ -56,6 +57,49 @@
             android:layout_width="100dp"/>
     </LinearLayout>
 
+    <LinearLayout android:orientation="horizontal"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent">
+
+        <LinearLayout
+            android:layout_weight="1"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView android:layout_marginLeft="5dp"
+                android:text="Name :"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content" />
+
+            <EditText
+                android:id="@+id/item_name_Text"
+                android:layout_height="wrap_content"
+                android:layout_width="140dp"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_weight="1"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView android:text="Closest :"
+                android:layout_gravity="center_vertical"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content" />
+
+            <TextView
+                android:layout_gravity="center_vertical"
+                android:id="@+id/closestText"
+                android:layout_height="wrap_content"
+                android:layout_width="100dp"/>
+
+        </LinearLayout>
+
+    </LinearLayout>
+
     <ImageView android:id="@+id/admin_imageView"
         android:layout_weight="1"
         android:layout_height="0dp"
@@ -66,6 +110,7 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <Button
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
@@ -82,7 +127,7 @@
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:layout_gravity="center"
-            android:text="Save"
+            android:text="Add"
             android:onClick="onSaveClick"/>
     </LinearLayout>
 
