--- a/AugmentEPF/app/src/main/res/layout/activity_admin.xml
+++ b/AugmentEPF/app/src/main/res/layout/activity_admin.xml
@@ -70,12 +70,15 @@
             <TextView android:layout_marginLeft="5dp"
                 android:text="Name :"
                 android:layout_height="wrap_content"
-                android:layout_width="wrap_content" />
+                android:layout_width="wrap_content"/>
 
             <EditText
                 android:id="@+id/item_name_Text"
                 android:layout_height="wrap_content"
-                android:layout_width="140dp"/>
+                android:layout_width="140dp"
+                android:maxLines="1"
+                android:inputType="text"
+                android:imeOptions="actionDone"/>
 
         </LinearLayout>
 
