--- a/AugmentEPF/app/src/main/res/layout/activity_admin.xml
+++ b/AugmentEPF/app/src/main/res/layout/activity_admin.xml
@@ -103,11 +103,19 @@
 
     </LinearLayout>
 
-    <ImageView android:id="@+id/admin_imageView"
+    <fragment
+        android:name="com.filiereticsa.arc.augmentepf.localization.LocalizationFragment"
+        android:id="@+id/localization_fragment"
+        android:layout_width="match_parent"
+        android:layout_weight="1"
+        android:layout_height="0dp"
+        />
+
+    <!--<ImageView android:id="@+id/admin_imageView"
         android:layout_weight="1"
         android:layout_height="0dp"
         android:layout_width="match_parent"
-        android:background="@color/lightGrey"/>
+        android:background="@color/lightGrey"/>-->
 
     <LinearLayout android:gravity="center_horizontal"
         android:orientation="horizontal"
