Changed server request and added premices of Calendar

--- a/AugmentEPF/app/src/main/res/values/colors.xml
+++ b/AugmentEPF/app/src/main/res/values/colors.xml
@@ -11,7 +11,9 @@
     <color name="gold">#FFD700</color>
     <color name="grey">#BFBFBFBF</color>
     <color name="white">#fffeff</color>
+    <color name="grey_white">#faf7f7f7</color>
 
 
     <color name="path_color">#4286f4</color>
+    <color name="transparent">#00ffffff</color>
 </resources>
