--- a/AugmentEPF/app/src/main/res/xml/settings.xml
+++ b/AugmentEPF/app/src/main/res/xml/settings.xml
@@ -48,7 +48,7 @@
 
         <!-- Lien iCal -->
         <EditTextPreference
-            android:key="edit"
+            android:key="ical"
             android:title="@string/ical_link"
             android:summary="@string/ical_summary"
             android:dialogTitle="@string/ical_link"
