--- a/AugmentEPF/app/src/main/res/menu/admin_menu.xml
+++ b/AugmentEPF/app/src/main/res/menu/admin_menu.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:title="2nd Floor"
+    <item android:title="@string/admin_2nf_floor"
         android:id="@+id/action_second_floor"/>
-    <item android:title="1st Floor"
+    <item android:title="@string/admin_1st_floor"
         android:id="@+id/action_first_floor"/>
-    <item android:title="Ground Floor"
+    <item android:title="@string/admin_ground_floor"
         android:id="@+id/action_ground_floor"/>
-    <item android:title="Lower Floor"
+    <item android:title="@string/admin_lower_floor"
         android:id="@+id/action_lower_floor"/>
 
 </menu>
