Added new classes: Guidance, TrajectorySegment. Some stirngs are added too. Modified the method: onPathChanged in class LocalizationFragment in order to try the guidance in the application. Another change is the grid of the path with downstairs in GABeaconMap

--- a/AugmentEPF/app/src/main/res/xml/settings.xml
+++ b/AugmentEPF/app/src/main/res/xml/settings.xml
@@ -56,6 +56,20 @@
             android:inputType="text"
             android:singleLine="true">
         </EditTextPreference>
+
+        <!-- Button to change the email -->
+        <Preference
+            android:title="Change your mail"
+            android:key="@string/changeEmailButton"
+            android:summary="@string/summaryChangeEmail">
+        </Preference>
+
+        <!-- Button to reset the password -->
+        <Preference
+            android:title="Reset password"
+            android:key="@string/resetPwButton"
+            android:summary="@string/summaryChangePw">
+        </Preference>
     </PreferenceCategory>
 
     <!-- Navigation parameters -->
