--- a/AugmentEPF/app/src/main/res/layout/activity_calendar.xml
+++ b/AugmentEPF/app/src/main/res/layout/activity_calendar.xml
@@ -1,12 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/linearLayout"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.filiereticsa.arc.augmentepf.activities.CalendarActivity"
     android:orientation="vertical">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <Button
+            android:id="@+id/ical_button"
+            style="@android:style/Widget.Button"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:background="@drawable/red_button"
+            android:onClick="onIcalClicked"
+            android:text="@string/ical_link"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            android:layout_weight="1"/>
+
+        <Button
+            android:id="@+id/previous_button"
+            style="@android:style/Widget.Button"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:background="@drawable/red_button"
+            android:onClick="onPreviousClicked"
+            android:text="@string/previous"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            android:layout_weight="1"/>
+
+        <Button
+            android:id="@+id/current_button"
+            style="@android:style/Widget.Button"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:background="@drawable/red_button"
+            android:onClick="onCurrentClicked"
+            android:text="@string/current"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            android:layout_weight="1"/>
+
+        <Button
+            android:id="@+id/next_button"
+            style="@android:style/Widget.Button"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:background="@drawable/red_button"
+            android:onClick="onNextClicked"
+            android:text="@string/next"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            android:layout_weight="1"/>
+
+
+    </LinearLayout>
 
     <EditText
         android:layout_width="match_parent"
